[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game/Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Game.gd" type="Script" id=2]
[ext_resource path="res://UI/ScreenCover.tscn" type="PackedScene" id=3]
[ext_resource path="res://Theme.tres" type="Theme" id=4]
[ext_resource path="res://Game/Cards/CSMA.tres" type="Resource" id=5]
[ext_resource path="res://Game/Cards/RTS.tres" type="Resource" id=6]
[ext_resource path="res://Game/Cards/Whitelists.tres" type="Resource" id=7]
[ext_resource path="res://Game/Cards/StrongPasswords.tres" type="Resource" id=8]
[ext_resource path="res://Game/Cards/Encryption.tres" type="Resource" id=9]
[ext_resource path="res://Game/Cards/MACSpoof.tres" type="Resource" id=10]
[ext_resource path="res://Game/Cards/HiddenSSID.tres" type="Resource" id=11]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )
cards = [ ExtResource( 5 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ) ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 14.0
theme = ExtResource( 4 )
theme_type_variation = "Title"
text = "Pregame"
align = 1
valign = 1

[node name="ScreenCover" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 288, 287 )
current = true

[node name="Player1" parent="." instance=ExtResource( 1 )]

[node name="Player2" parent="." instance=ExtResource( 1 )]

[connection signal="request_card" from="Player1" to="." method="_on_Player1_request_card"]
[connection signal="wap_discovered" from="Player1" to="." method="_on_Player1_wap_discovered"]
[connection signal="request_card" from="Player2" to="." method="_on_Player2_request_card"]
[connection signal="wap_discovered" from="Player2" to="." method="_on_Player2_wap_discovered"]
